Changelog
=========

1.6-dev - (unreleased)
----------------------

1.5 - (2011-09-30)
------------------
* Feature: Updated geonames API usage according with
  this specifications: http://www.geonames.org/export/web-services.html
  Please update the 'geonames_key' in portal_properties/geographical_properties
  with your geonames username
  [voineali #4525]
* Feature: Use geonames.org service for free search, then fallback to Google service
  [voineali #4525]

1.4 - (2011-09-07)
------------------
* Feature: Geotag widget usability, add tag in one click
  [voineali #4429]

1.3 - (2011-04-20)
------------------
 * Bug fix: fix widget bugs [szabozo0 #4260]

1.2 - (2011-04-19)
------------------
 * Bug fix: fix import errors [szabozo0 #4260]
 * Feature: created formlib version of the widget [szabozo0 #4260]
 * Cleanup: of most pylint violations [ichimdav #4140]
 * Cleanup: of pyflakes warnings [ichimdav #4141]
 * Bug fix: Remove geotags suggestion duplicates [voineali #3357]
 * Change: Moved alchemy auto-discover code to eea.alchemy
     as it's not only about geotags, it will also discover
     temporal coverage and keywords [voineali #3357]

1.1 - (2010-12-13)
------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]
 * Bug fix: Fixed doc tests [voineali #3821]

1.0 - (2010-10-12)
------------------
* Initial release
